# oradump

./: .gitignore  CMakeLists.txt  README.md  exports.cpp  index.cpp  oradump.sln  oradump.vcxproj  start-edw.cmd  start-topaz.cmd
include/: base64.hxx  exports.hpp  oradump.hpp  semaphore.hpp
